# i-am-synthetic-cpp-sfml

./: .gitmodules  CMakeLists.txt  CREDITS  Makefile  README.md
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  i_am_synthetic_c___sfml.cbp
cmake_modules/: FindCrispSynth.cmake  FindSFML.cmake
include/glad/: glad.h
src/: Button.cpp  Button.h  Data.cpp  Data.h  IResources.h  LocalResources.cpp  LocalResources.h  Locator.cpp  Locator.h  Mesh  NullResources.cpp  NullResources.h  Synthy.cpp  Synthy.h  glad.c  main.cpp
src/Buttons/: Button.cpp  Button.h  MainMenuTextures.cpp  MainMenuTextures.h  PlayButton.cpp  PlayButton.h
src/buttons/: BackButton.cpp  BackButton.h  Button.cpp  Button.h  CancelTextInputButton.cpp  CancelTextInputButton.h  ConfirmButton.cpp  ConfirmButton.h  ConfirmFilenameButton.cpp  ConfirmFilenameButton.h  CreditsButton.cpp  CreditsButton.h  FileAddButton.cpp  FileAddButton.h  FileButton.cpp  FileButton.h  MainMenuButton.cpp  MainMenuButton.h  MainMenuTextures.cpp  MainMenuTextures.h  PlayButton.cpp  PlayButton.h  PlayLevelButton.cpp  PlayLevelButton.h
src/game-objects/: GameObject.cpp  GameObject.h  InputTextObject.cpp  InputTextObject.h  RectangleObject.cpp  RectangleObject.h  ShapeObject.cpp  ShapeObject.h  SpriteObject.cpp  SpriteObject.h  StoryObject.cpp  StoryObject.h  TextObject.cpp  TextObject.h
src/game-objects/components/: Component.cpp  Component.h  DrawableComponent.cpp  DrawableComponent.h  RectangleComponent.cpp  RectangleComponent.h  RenderComponent.cpp  RenderComponent.h  ShapeComponent.cpp  ShapeComponent.h  SpriteComponent.cpp  SpriteComponent.h  TextComponent.cpp  TextComponent.h
src/resources/: ButtonType.h  IResources.h  LocalResources.cpp  LocalResources.h  MainMenuTextures.cpp  MainMenuTextures.h  NullResources.cpp  NullResources.h  NullWindowSubroutines.cpp  TextureLoader.cpp  TextureLoader.h
src/scenes/: CreditsScene.cpp  CreditsScene.h  LevelScene.cpp  LevelScene.h  MainMenuScene.cpp  MainMenuScene.h  PlayScene.cpp  PlayScene.h  Scene.cpp  Scene.h  StoryScene.cpp  StoryScene.h  TextInput.cpp  TextInput.h
src/window-subroutines/: IWindowSubroutines.h  InfoWindowSubroutines.cpp  InfoWindowSubroutines.h  NullWindowSubroutines.cpp  NullWindowSubroutines.h
